fix button colors, spacing on login

--- a/frontend-app/src/components/homeComponents/style.css
+++ b/frontend-app/src/components/homeComponents/style.css
@@ -64,7 +64,8 @@
 
 #card-label:hover{
     
-    text-decoration: underline;
+    background: #6366F1;
+    color: #FFFFFF;
 }
 
 .badge-step{
